--- a/fedcloud-ops/Chart.yaml
+++ b/fedcloud-ops/Chart.yaml
@@ -2,4 +2,4 @@ apiVersion: v1
 appVersion: '1.0'
 description: FedCloud catchall operations helm chart for Kubernetes
 name: fedcloud-ops
-version: 0.1.0-0a31ac6
+version: 0.1.0
