--- a/fedcloud-ops/templates/cloudkeeper/svc.yaml
+++ b/fedcloud-ops/templates/cloudkeeper/svc.yaml
@@ -5,11 +5,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ck-os-{{ $site | lower }}-{{ $vo | lower | replace "." "_" }}
+  name: ck-os-{{ $site | lower }}-{{ $vo | lower | replace "." "-" }}
 spec:
-  type: {{ .Values.cloudkeeperOS.service.type }}
+  type: {{ $values.cloudkeeperOS.service.type }}
   selector:
-    app: ck-os-{{ $site | lower }}-{{ $vo | lower }}
+    app: ck-os-{{ $site | lower }}-{{ $vo | lower | replace "." "-" }}
   ports:
     - protocol: TCP
       port: 50051
