--- a/.travis.yaml
+++ b/.travis.yaml
@@ -17,6 +17,7 @@ jobs:
     - helm init --client-only
     script:
     - helm lint fedcloud-ops 
+    - helm template -f test-sites fedcloud-ops
     - CHARTPRESS_OPT=""
     - if [ "x$TRAVIS_TAG" != "x" ]; then CHARTPRESS_OPT="$CHARTPRESS_OPT --tag $TRAVIS_TAG"; fi
     - if [ "x$TRAVIS_COMMIT_RANGE" != "x" ]; then CHARTPRESS_OPT="$CHARTPRESS_OPT --commit-range $TRAVIS_COMMIT_RANGE"; fi
