make cron and service see each other

--- a/fedcloud-ops/templates/cloudkeeper/deployment.yaml
+++ b/fedcloud-ops/templates/cloudkeeper/deployment.yaml
@@ -40,6 +40,8 @@ spec:
           - https://aai.egi.eu/oidc/.well-known/openid-configuration
           - --openstack-project-id
           - {{ $share.auth.project }}
+          - --connection-listen-address
+          - 0.0.0.0:50051
           env:
           - name: CHECKIN_CLIENT_ID
             valueFrom:
