--- a/fedcloud-ops/templates/cloudkeeper/cronjob.yaml
+++ b/fedcloud-ops/templates/cloudkeeper/cronjob.yaml
@@ -28,7 +28,7 @@ spec:
             - --debug
             env:
             - name: BACKEND_ENDPOINT
-              value: http://ck-os-{{ $site | lower }}-{{ $vo | lower | replace "." "-" }}:50051/
+              value: ck-os-{{ $site | lower }}-{{ $vo | lower | replace "." "-" }}:50051/
             - name: CLOUDKEEPER_SECRET
               valueFrom:
                 secretKeyRef:
