--- a/fedcloud-ops/templates/cloudkeeper/oidc-secret.yaml
+++ b/fedcloud-ops/templates/cloudkeeper/oidc-secret.yaml
@@ -7,8 +7,8 @@ metadata:
   name: checkin-cloudkeeper-creds-{{ $site | lower }}-{{ $vo | lower }}
 type: Opaque
 data:
-  client_id: {{ $share.auth.cloudKeeper.clientId | b64enc | quote }}
-  client_secret: {{ $share.auth.cloudKeeper.clientSecret | b64enc | quote }}
-  refresh_token: {{ $share.auth.cloudKeeper.refreshToken | b64enc | quote }}
+  client_id: {{ $share.auth.cloudkeeper.clientId | b64enc | quote }}
+  client_secret: {{ $share.auth.cloudkeeper.clientSecret | b64enc | quote }}
+  refresh_token: {{ $share.auth.cloudkeeper.refreshToken | b64enc | quote }}
 {{- end }}
 {{- end }}
