--- a/fedcloud-ops/Chart.yaml
+++ b/fedcloud-ops/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-appVersion: "1.0"
+appVersion: '1.0'
 description: FedCloud catchall operations helm chart for Kubernetes
 name: fedcloud-ops
 version: 0.1.0
