--- a/fedcloud-ops/values.yaml
+++ b/fedcloud-ops/values.yaml
@@ -18,6 +18,9 @@ sites:
   #           clientId:
   #           clientSecret:
   #           refreshToken:
+  #       # optionally specify a protocol for the Keystone V3 federation API
+  #       # default is openid
+  #       protocol: openid
   #       defaultNetwork: private | public | private_only | public_only (default is public)
   #       publicNetwork: <name of the public network> (default is UNKNOWN)
 
