--- a/sites.yaml
+++ b/sites.yaml
@@ -12,8 +12,8 @@ sites:
           project: 7a91022b9ae74ed9ac1a574972a79499
         publicNetwork: PUBLIC
   RECAS-BARI:
-    # we have an issue here with the URL in GOCDB
     endpoint: https://cloud.recas.ba.infn.it:5000/v3
+    protocol: oidc
     vos:
       fedcloud.egi.eu:
         auth:
@@ -30,6 +30,85 @@ sites:
         auth:
           project: def49ef0ac58495f90d8aa2463b33b10
         publicNetwork: provider
+  INFN-CATANIA-STACK:
+    endpoint: https://stack-server.ct.infn.it:35357/v3
+    vos:
+      fedcloud.egi.eu:
+        auth:
+          project: 2669272fcc0c4c6f842a1431eaa5456e
+        defaultNetwork: public
+  UA-BITP:
+    endpoint: https://openstack.bitp.kiev.ua:5000/v3
+    vos:
+      fedcloud.egi.eu:
+        auth:
+          project: 8d48556b378549a3a3f02ce933096c1f
+        publicNetwork: UNKNWN
+  IISAS-FedCloud:
+    endpoint: https://nova.ui.savba.sk:5000/v3
+    vos:
+      fedcloud.egi.eu:
+        auth:
+          project: 36de196588924f048dda146e9ade8632
+        publicNetwork: UNKNWN
+  IISAS-GPUCloud:
+    endpoint: https://keystone3.ui.savba.sk:5000/v3
+    vos:
+      fedcloud.egi.eu:
+        auth:
+          project: 057a08f7db7245bfbeec7985a01ac596
+        publicNetwork: UNKNWN
+  SCAI:
+    endpoint: https://fc.scai.fraunhofer.de:5000/v2.0
+    vos:
+      fedcloud.egi.eu:
+        auth:
+          project: 162ecb7fe3ee450ca436935f87662858
+        publicNetwork: UNKNWN
+  INFN-PADOVA-STACK:
+    endpoint: https://egi-cloud.pd.infn.it:443/v3/
+    vos:
+      fedcloud.egi.eu:
+        auth:
+          project: 260c82efcd854009805e691e207bdd05
+        publicNetwork: UNKNWN
+  CLOUDIFIN:
+    endpoint: https://cloud-ctrl.nipne.ro:443/v3
+    vos:
+      fedcloud.egi.eu:
+        auth:
+          project: 245cdfdce0c84227b9b60d247618f635
+        publicNetwork: UNKNWN
+  CYFRONET-CLOUD:
+    endpoint: https://api.cloud.cyfronet.pl:5000/
+    vos:
+      fedcloud.egi.eu:
+        auth:
+          project: 1295728b1ce747fb96c043c6e254ad6f
+        publicNetwork: UNKNWN
+  IFCA-LCG2:
+    endpoint: https://api.cloud.ifca.es:5000/v3
+    protocol: oidc
+    vos:
+      fedcloud.egi.eu:
+        auth:
+          project: 999f045cb1ff4684a15ebb338af69460
+        publicNetwork: UNKNWN
+  NCG-INGRID-PT:
+    endpoint: https://nimbus.ncg.ingrid.pt:5000/v3/
+    vos:
+      fedcloud.egi.eu:
+        auth:
+          project: 913896a00c8f4f0fa5b56735d270b0cf
+        publicNetwork: UNKNWN
+#  OpenID Connect support failing
+#  GWDG-CLOUD:
+#    endpoint: https://api.prod.cloud.gwdg.de:5000/v3
+#    vos:
+#      fedcloud.egi.eu:
+#        auth:
+#          project: na
+#        publicNetwork: UNKNWN
   CESNET-MCC:
     endpoint: https://identity.cloud.muni.cz/v3
     vos:
