Provide a way to debug cloud-info

--- a/cloud-info/Dockerfile
+++ b/cloud-info/Dockerfile
@@ -13,7 +13,7 @@ RUN pip install python-keystoneclient \
                 python-glanceclient \
                 keystoneauth1
 
-RUN pip install git+https://github.com/grnet/ams-clipw.git
+RUN pip install git+https://github.com/enolfc/ams-clipw.git@patch-1
 
 RUN curl -Ls \
         https://dist.eugridpma.info/distribution/igtf/current/GPG-KEY-EUGridPMA-RPM-3 \
