--- a/fedcloud-ops/templates/cloudkeeper/oidc-secret.yaml
+++ b/fedcloud-ops/templates/cloudkeeper/oidc-secret.yaml
@@ -1,5 +1,6 @@
 {{- range $site, $siteConf := .Values.sites }}
 {{- range $vo, $share := $siteConf.vos }}
+{{- if $share.auth.cloudkeeper }}
 ---
 apiVersion: v1
 kind: Secret
@@ -10,5 +11,6 @@ data:
   client_id: {{ $share.auth.cloudkeeper.clientId | b64enc | quote }}
   client_secret: {{ $share.auth.cloudkeeper.clientSecret | b64enc | quote }}
   refresh_token: {{ $share.auth.cloudkeeper.refreshToken | b64enc | quote }}
+{{- end }}
 {{- end }}
 {{- end }}
