--- a/fedcloud-ops/templates/cloudkeeper/deployment.yaml
+++ b/fedcloud-ops/templates/cloudkeeper/deployment.yaml
@@ -1,6 +1,7 @@
 {{- $values := .Values -}}
 {{- range $site, $siteConf := .Values.sites }}
 {{- range $vo, $share := $siteConf.vos }}
+{{- if $share.auth.cloudkeeper }}
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -62,5 +63,6 @@ spec:
             - containerPort: 50051
           resources:
 {{ toYaml $values.resources | indent 12 }}
+{{- end }}
 {{- end }}
 {{- end }}
