Improve cloud-info-provider support (#11)
* Allow to use another protocol for oidc

* Site configuration update

Include all sites with fedcloud.egi.eu VO

* Provide a way to debug cloud-info

* Do not try to create conf for non-available auth

* Update cloud-info/cloud-info-wrapper.sh

Co-Authored-By: Baptiste Grenier <baptiste@bapt.name>

* Check for variable not empty

--- a/fedcloud-ops/templates/cloud-info/cronjob.yaml
+++ b/fedcloud-ops/templates/cloud-info/cronjob.yaml
@@ -25,7 +25,7 @@ spec:
             - name: OS_IDENTITY_PROVIDER
               value: egi.eu
             - name: OS_PROTOCOL
-              value: openid
+              value: {{ $siteConf.protocol | default "openid" }}
             - name: CHECKIN_SECRETS_PATH
               value: /etc/checkin/
             - name: CHECKIN_OIDC_TOKEN
@@ -40,12 +40,18 @@ spec:
               value: {{ $values.cloudInfo.ams.project }}
             - name: AMS_HOST
               value: {{ $values.cloudInfo.ams.host }}
+            {{- if $values.cloudInfo.debug }}
+            - name: DEBUG
+              value: "1"
+            {{- end }}
             volumeMounts:
             - mountPath: /etc/cloud-info-provider/site
               name: cloud-info-config
             {{- range $vo, $share := $siteConf.vos }}
+            {{- if $share.auth.cloudInfo }}
             - mountPath: /etc/checkin/{{ $vo | lower }}
               name: checkin-creds-{{ $vo | lower | replace "." "-" }}
+            {{- end }}
             {{- end }}
             - mountPath: /etc/ams
               name: ams-secret
@@ -59,9 +65,11 @@ spec:
               - key: site.yaml
                 path: site.yaml
           {{- range $vo, $share := $siteConf.vos }}
+          {{- if $share.auth.cloudInfo }}
           - name: checkin-creds-{{ $vo | lower | replace "." "-" }}
             secret:
               secretName: checkin-cloudinfo-creds-{{ $site | lower }}-{{ $vo | lower }}
+          {{- end }}
           {{- end }}
           - name: ams-secret
             secret:
