--- a/fedcloud-ops/values.yaml
+++ b/fedcloud-ops/values.yaml
@@ -18,10 +18,14 @@ sites:
   #           clientId:
   #           clientSecret:
   #           refreshToken:
+  #       # optionally specify a protocol for the Keystone V3 federation API
+  #       # default is openid
+  #       protocol: openid
   #       defaultNetwork: private | public | private_only | public_only (default is public)
   #       publicNetwork: <name of the public network> (default is UNKNOWN)
 
 cloudInfo:
+  debug: false
   # how often should the cloud-info-provider run, default every 5 minutes
   # rethink if this is actually a cronjob or a different thing
   schedule: '*/5 * * * *'
