Allow to specify image format

--- a/fedcloud-ops/templates/cloudkeeper/cronjob.yaml
+++ b/fedcloud-ops/templates/cloudkeeper/cronjob.yaml
@@ -25,7 +25,7 @@ spec:
             - --no-remote-mode
             - --backend-endpoint=$(BACKEND_ENDPOINT)
             # yup OpenStack will allow vmdk, so no conversion needed!
-            - --formats=vmdk qcow2
+            - --formats={{ $siteConf.imageFormat | default "vmdk qcow2" }}
             - --debug
             env:
             - name: BACKEND_ENDPOINT
@@ -34,7 +34,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: cloudkeeper-secret-{{ $vo }}
-                  key: token 
+                  key: token
             resources:
 {{ toYaml $values.resources | indent 14 }}
         {{- with $values.nodeSelector }}
