--- a/sites/IISAS-FedCloud.yaml
+++ b/sites/IISAS-FedCloud.yaml
@@ -1,3 +1,9 @@
-endpoint: https://nova.ui.savba.sk:5000/v3
 gocdb: IISAS-FedCloud
-vos: {}
+endpoint: https://cloud.ui.savba.sk:5000/v3/
+vos:
+  covid19.eosc-synergy.eu:
+    auth:
+      project_id: a87268866a534fe38c49f5ec154d0223
+  eosc-synergy.eu:
+    auth:
+      project_id: d09a0c28397f4b41ad4bd62e7d63b51e
